# lib_rust_fastdb

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
rust_fastdb/: .gitignore  Cargo.toml
